--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "legal-auto-review",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://ben-noncodingceo.github.io/legal-auto-review/",
   "type": "module",
   "scripts": {
     "dev": "vite",
