--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "docx": "^9.5.1",
     "docxtemplater": "^3.42.0",
     "file-saver": "^2.0.5",
+    "jsonrepair": "^3.13.1",
     "lucide-react": "^0.294.0",
     "mammoth": "^1.6.0",
     "pdfjs-dist": "^3.11.174",
